samples/grpc/shopping-cart-service-scala/kubernetes/shopping-cart-service-cr.yml
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "shopping"
